# ass

./: .cursorrules  .envrc  .gitignore  Cargo.toml  GPTHistory.ts  README.md  bacon.toml  devbox.json  flake.nix  justfile  memory.json  new  prompt  run.ts
src/: agent.rs  backend.rs  cli.rs  client.rs  config.rs  diff.rs  enricher.rs  file_creator.rs  file_editor.rs  file_editor_tests.rs  file_reader.rs  file_state.rs  file_state_manager.rs  file_state_tests.rs  lib.rs  list_files.rs  main.rs  patch.rs  path_expander.rs  permissions.rs  prompt_builder.rs  shell.rs  streaming_executor.rs  tool_collection.rs  tool_executor.rs  tool_manager.rs  tools.rs  ui.rs
src/tools/: edit_files.rs  edit_files_tests.rs  execute_shell_command.rs  list_files.rs  mod.rs  read_files.rs
tests/: agent_test.rs
