[package]
name = "ass"
version = "0.1.0"
edition = "2024"

[dependencies]
openrouter_api = { path = "../openrouter_api" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
colored = "3.0.0"
clap = { version = "4.5.41", features = ["derive"] }
toml = "0.9.2"
xdg = "3.0.0"
once_cell = "1.21.3"
fancy-regex = "0.15.0"
ignore = "0.4.23"
similar = { version = "2.7.0", features = ["inline"] }
tempfile = "3.20.0"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.20.0"
